--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,6 @@
 body {
   overflow-x: hidden;
   cursor: none;
-  padding-bottom: 20%;
 }
 
 .cursor-dot {
@@ -504,4 +503,86 @@ form svg {
   width: 250px;
   height: 250px;
   margin-top: -8%;
+}
+
+.footer-follow-us span {
+  display: flex;
+  gap: 5px;
+}
+
+.footer-follow-us span svg {
+  width: 20px;
+  height: 20px;
+}
+
+.footer-follow-us span h6 {
+  font-size: 21px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-around;
+  padding: 3% 0;
+}
+
+.footer-contact {
+  max-width: 27%;
+  text-transform: capitalize;
+}
+
+.footer-contact b {
+  text-transform: uppercase;
+}
+
+.footer-contact li {
+  font-size: 17px;
+  margin-top: 10px;
+}
+
+.footer-follow-us {
+  margin-top: 35%;
+}
+
+.footer-icons {
+  display: flex;
+  align-items: baseline;
+  gap: 15px;
+  margin-top: 10px;
+}
+
+.fotter-servcie li {
+  margin-top: 10px;
+  font-size: 18px;
+}
+
+.fotter-servcie li:hover {
+  color: #f1850a;
+}
+
+.fotter-servcie li:first-of-type {
+  margin-top: 2%;
+}
+
+.footer h3 {
+  font-weight: bolder;
+}
+
+.footer-qr {
+  margin-left: -34%;
+}
+
+#footer-email {
+  text-transform: uppercase;
+}
+
+#linkedin {
+  color: #0273b2;
+}
+
+#youtube {
+  color: #ff0000;
+}
+
+#facebook {
+  color: #0e87ef;
 }
